# lester-todo

./: .dockerignore  .env  .env.example  .gitignore  .plan  Dockerfile  README.md  docker-compose.yml  fly.toml  start.sh
backend/: Cargo.toml
backend/migrations/: 0001_create_todos.sql  README.md
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs
backend/src/handlers/: admin.rs  mod.rs  todo.rs
backend/src/models/: todo.rs
backend/src/repo/: todo.rs
backend/tests/: admin.rs  todos.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  client.ts  todos.ts
frontend/src/components/: ErrorBanner.tsx  FilterTabs.tsx  LoadingPanel.tsx  NavBar.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/pages/: AdminPage.tsx
